--- a/sole-pay-landing/index.html
+++ b/sole-pay-landing/index.html
@@ -300,30 +300,8 @@
           </span>
         </div>
       </footer>
-      <script>
-        const counters = document.querySelectorAll('.counter');
-        const speed = 400; // The lower the slower
-        counters.forEach(counter => {
-          const updateCount = () => {
-            const target = +counter.getAttribute('data-target');
-            const count = +counter.innerText;
-            // Lower inc to slow and higher to slow
-            const inc = target / speed;
-            // Check if target is reached
-            if (count < target) {
-              // Add inc to count and output in counter
-              counter.innerText = count + inc;
-              // Call function every ms
-              setTimeout(updateCount, 1);
-            } else {
-              counter.innerText = target;
-            }
-          };
-          updateCount();
-        });
-      </script>
-  <script src="./config.js">
-  </script>    
+  <script src="./config.js"></script>
+  <script src="./import.js"></script>    
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init();
