--- a/sole-pay-landing/index.html
+++ b/sole-pay-landing/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta
+    name="description"
+    content="Collect Payments through one mode"
+  />
+  <link rel="icon" href="./favicon.svg" />
+
+    <title>Sole Pay</title>
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.1/tailwind.min.css"
     rel="stylesheet"
@@ -42,8 +48,8 @@
               <a href="http://localhost:3000/fill" id="redirect"><button class="inline-flex text-white bg-green-400 border-0 py-2 px-8 focus:outline-none hover:bg-green-700 rounded text-2xl shadow-lg" style="font-family: 'Montserrat', sans-serif; font-weight:bold;">CREATE UPI CARD</button></a></div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center" alt="hero" src="https://i.ibb.co/8X845TY/land-2.png">
-        <p class="ml-4 mb-4">Note:-Card created by Samaratians All around a non profit organization that collect donations for good cause.😀</p>
+            <img class="object-cover object-center" alt="hero" src="https://i.ibb.co/gRM4NQZ/land-4.png">
+        <p class="ml-4 mb-4">Note:-Card created by us if you like sole pay or love the concept you can donate here just by scan.ThankYou😀</p>
           </div>
         </div>
       </section>
@@ -306,6 +312,14 @@
   <script>
     AOS.init();
   </script>
-      
+     <!-- Customerly Live Chat Snippet Code -->
+<script>
+  !function(){var e=window,i=document,t="customerly",n="queue",o="load",r="settings",u=e[t]=e[t]||[];if(u.t){return void u.i("[customerly] SDK already initialized. Snippet included twice.")}u.t=!0;u.loaded=!1;u.o=["event","attribute","update","show","hide","open","close"];u[n]=[];u.i=function(t){e.console&&!u.debug&&console.error&&console.error(t)};u.u=function(e){return function(){var t=Array.prototype.slice.call(arguments);return t.unshift(e),u[n].push(t),u}};u[o]=function(t){u[r]=t||{};if(u.loaded){return void u.i("[customerly] SDK already loaded. Use customerly.update to change settings.")}u.loaded=!0;var e=i.createElement("script");e.type="text/javascript",e.async=!0,e.src="https://messenger.customerly.io/launcher.js";var n=i.getElementsByTagName("script")[0];n.parentNode.insertBefore(e,n)};u.o.forEach(function(t){u[t]=u.u(t)})}();
+ 
+  customerly.load({
+        "app_id": "7a7c133c"
+  });
+</script>
+<!-- End of Customerly Live Chat Snippet Code --> 
 </body>
 </html>
