adding one ads of adstera

--- a/sole-pay-landing/index.html
+++ b/sole-pay-landing/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="flex-grow pl-4">
                   <h2 class="font-medium title-font text-xl text-gray-900 mb-1 tracking-wider">Customize Card</h2>
-                  <p class="leading-relaxed">After your card is created you can can share or download your card</p>
+                  <p class="leading-relaxed">In this step you can add logo and make your upi card eye cachy</p>
                 </div>
               </div>
               <div class="flex relative pb-12">
@@ -87,7 +87,7 @@
                 </div>
                 <div class="flex-grow pl-4">
                   <h2 class="font-medium title-font text-xl text-gray-900 mb-1 tracking-wider">Download or Share</h2>
-                  <p class="leading-relaxed">No need to fill your bank details , ifsc code and other info only upi id is required to start collect payments</p>
+                  <p class="leading-relaxed">After your card is created you can can share or download your card</p>
                 </div>
               </div>
             </div>
@@ -172,7 +172,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="block w-5 h-5 text-gray-400 mb-4" viewBox="0 0 975.036 975.036">
                   <path d="M925.036 57.197h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.399 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l36 76c11.6 24.399 40.3 35.1 65.1 24.399 66.2-28.6 122.101-64.8 167.7-108.8 55.601-53.7 93.7-114.3 114.3-181.9 20.601-67.6 30.9-159.8 30.9-276.8v-239c0-27.599-22.401-50-50-50zM106.036 913.497c65.4-28.5 121-64.699 166.9-108.6 56.1-53.7 94.4-114.1 115-181.2 20.6-67.1 30.899-159.6 30.899-277.5v-239c0-27.6-22.399-50-50-50h-304c-27.6 0-50 22.4-50 50v304c0 27.601 22.4 50 50 50h145.5c-1.9 79.601-20.4 143.3-55.4 191.2-27.6 37.8-69.4 69.1-125.3 93.8-25.7 11.3-36.8 41.7-24.8 67.101l35.9 75.8c11.601 24.399 40.501 35.2 65.301 24.399z"></path>
                 </svg>
-                <p class="leading-relaxed mb-6">I recently need a payment gateway to create link and share with community to collect donations, but not want to spend on each transaction and then I came across Sole Pay Platform. I created my card link and distribute the card with community and it was is to use Thanks to Sole Pay</p>
+                <p class="leading-relaxed mb-6">I recently need a payment gateway to create link and share with community to collect donations, but not want to spend on each transaction and then I came across Sole Pay Platform. I created my card link and distribute the card with community and it was easy to use Thanks to Sole Pay</p>
                 <a class="inline-flex items-center">
                   <img alt="testimonial" src="https://i.ibb.co/c8tNCsp/preeti-mam.jpg" class="w-12 h-12 rounded-full flex-shrink-0 object-cover object-center">
                   <span class="flex-grow flex flex-col pl-4">
