--- a/sole-pay-landing/index.html
+++ b/sole-pay-landing/index.html
@@ -18,6 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./style.css">
+<script data-ad-client="ca-pub-8777585622607971" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body style="font-family: 'Montserrat', sans-serif;">
   <div class="navbar flex items-center p-2 lg:px-24 sm:px-10 justify-between" style="background-color: white;">
