adding react frontend link

--- a/sole-pay-landing/index.html
+++ b/sole-pay-landing/index.html
@@ -47,7 +47,7 @@
             </h1>
             <p class="mb-8 leading-relaxed text-2xl font-semibold text-gray-50">Collect payment for free without any setup through one link jst by providing your UPI Id and create your QR code</p>
             <div class="flex justify-center">
-              <a href="http://localhost:3000/fill" id="redirect"><button class="inline-flex text-white bg-green-400 border-0 py-2 px-8 focus:outline-none hover:bg-green-700 rounded text-2xl shadow-lg" style="font-family: 'Montserrat', sans-serif; font-weight:bold;">CREATE UPI CARD</button></a></div>
+              <a href="/app" id="redirect"><button class="inline-flex text-white bg-green-400 border-0 py-2 px-8 focus:outline-none hover:bg-green-700 rounded text-2xl shadow-lg" style="font-family: 'Montserrat', sans-serif; font-weight:bold;">CREATE UPI CARD</button></a></div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
             <img class="object-cover object-center" alt="hero" src="https://i.ibb.co/gRM4NQZ/land-4.png">
